# bonsai

./: .gitignore  LICENSE  README.md  README.rst  bonsai-runner.py  cpp_example.py  setup.cfg  setup.py
bonsai/: __init__.py  __main__.py  analysis.py  bonsai.py  model.py  parser.py
bonsai/cpp/: analysis.py  clang_parser.py  model.py
bonsai/py/: __init__.py  builder.py  model.py  py_parser.py  visitor.py
examples/cpp/: call_graph_example.cpp  class_example.cpp  cross_file_def.cpp  cross_file_def.hpp  cross_file_ref.cpp  enum_example.cpp  operator_example.cpp  switch_example.cpp  template_example.cpp  try_example.cpp
examples/cpp/multi_def/: file1.cpp  file2.cpp  header.h  test.py
examples/py/: examples.py  modules.py
