[metadata]
name = bonsai-code
author = Andre Santos
author_email = andre.f.santos@inesctec.pt
license = MIT
description = Static analysis library.
keywords = static-analysis, ast, parsing
url = https://github.com/git-afsantos/bonsai
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
zip_safe = True

[options.entry_points]
console_scripts = bonsai = bonsai.bonsai:main

[options.package_data]
